<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragment.CreateAccountFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="78dp"
        android:text="Create \nAccount"
        android:textColor="@color/colorGreen"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/text_box"
            android:hint="@string/name"
            android:padding="12dp" />

        <EditText
            android:id="@+id/emailEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/text_box"
            android:hint="@string/email"
            android:padding="12dp" />

        <EditText
            android:id="@+id/passwordEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/text_box"
            android:hint="@string/password"
            android:padding="12dp" />

        <EditText
            android:id="@+id/confirmPasswordEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/text_box"
            android:hint="@string/confirm_password"
            android:padding="12dp" />

    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/layout"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:id="@+id/progressbar"/>

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/textBackToLogin"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_bg"
        android:text="@string/sign_up"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textBackToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:text="@string/back_to_login"
        android:textColor="@color/colorGreen"
        android:textSize="17sp"
        android:textStyle="bold" />

</RelativeLayout>