<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragment.CreateAccountFragment">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="Login"
        android:textColor="@color/colorGreen"
        android:layout_marginTop="78dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_below="@id/tvLogin"
        android:orientation="vertical">





        <EditText
            android:id="@+id/emailEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_margin="8dp"
            android:background="@drawable/text_box"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/passwordEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/text_box"
            android:hint="@string/password"
            android:padding="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkboxRememberPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGreen"
                android:layout_marginStart="13dp"
                android:text="Remember Password"/>

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="101dp"
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="Forgot Password"
                android:textColor="@color/colorGreen"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@drawable/button_bg"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:layout_above="@id/googleLoginBtn"
        />
    <Button
        android:id="@+id/googleLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_google"
        android:background="@drawable/button_bg"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:layout_above="@id/facebookLoginBtn"
        />
    <Button
        android:id="@+id/facebookLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_facebook"
        android:background="@drawable/button_bg"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:layout_above="@id/textBackToLogin"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_sign_up"
        android:id="@+id/textBackToLogin"
        android:textColor="@color/colorGreen"
        android:layout_alignParentBottom="true"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginBottom="75dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>